tests/unit-fail-compilation/j036a.c.ref
j036a.c:3:8: error: Signed integer overflow.
  Undefined behavior (UB-CEMX3).
   see C11 section 6.5:5 http://rvdoc.org/C11/6.5
   see C11 section J.2:1 item 36 http://rvdoc.org/C11/J.2
   see CERT-C section FLP32-C http://rvdoc.org/CERT-C/FLP32-C
   see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors j036a.c to see commands run.
